--- a/next-authentication/package.json
+++ b/next-authentication/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
+    "cookie-parser": "^1.4.4",
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-promise-router": "^3.0.3",
     "next": "9.1.6",
+    "node-fetch": "^2.6.0",
     "react": "16.12.0",
     "react-dom": "16.12.0"
   },
